--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.WaterAuthorityServices"
         tools:targetApi="31">
         <activity
+            android:name=".InvoicesActivity"
+            android:exported="false" />
+        <activity
             android:name=".AttachSubscriptions"
             android:exported="false" />
         <activity
