--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.WaterAuthorityServices"
         tools:targetApi="31">
         <activity
-            android:name=".InvoicesActivity"
+            android:name=".MyInvoices"
             android:exported="false" />
         <activity
             android:name=".AttachSubscriptions"
