--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.WaterAuthorityServices"
         tools:targetApi="31">
         <activity
+            android:name=".Ownership"
+            android:exported="false" />
+        <activity
             android:name=".RequestsStatus"
             android:exported="false" />
         <activity
